[package]
name = "llua"
version = "0.1.0"
authors = ["Martin Wang <wangxuesong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "llua"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.31"
nom = "5.1.2"
nom-derive = "0.6.3"
clap = "3.0.0-beta.1"
